--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "2a1949ee-a200-460d-a868-68e3a313b19e",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,69 @@
       "N: 1\n",
       "Epoch: 0 Loss: tensor(0.6710, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
       "Epoch: 1 Loss: tensor(0.4555, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
-      "Epoch: 2 Loss: tensor(0.4637, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n"
+      "Epoch: 2 Loss: tensor(0.4637, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 3 Loss: tensor(0.3358, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 4 Loss: tensor(0.4363, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "N: 2\n",
+      "Epoch: 0 Loss: tensor(0.5693, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 1 Loss: tensor(0.4542, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 2 Loss: tensor(0.4242, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 3 Loss: tensor(0.4298, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 4 Loss: tensor(0.5534, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "N: 3\n",
+      "Epoch: 0 Loss: tensor(0.6479, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 1 Loss: tensor(0.5939, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 2 Loss: tensor(0.6187, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 3 Loss: tensor(0.4592, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 4 Loss: tensor(0.4384, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "N: 4\n",
+      "Epoch: 0 Loss: tensor(0.6714, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 1 Loss: tensor(0.5221, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 2 Loss: tensor(0.3790, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 3 Loss: tensor(0.4346, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 4 Loss: tensor(0.4397, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "N: 5\n",
+      "Epoch: 0 Loss: tensor(0.6731, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 1 Loss: tensor(0.5771, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 2 Loss: tensor(0.4684, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 3 Loss: tensor(0.3664, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 4 Loss: tensor(0.3709, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "N: 6\n",
+      "Epoch: 0 Loss: tensor(0.7135, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 1 Loss: tensor(0.5781, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 2 Loss: tensor(0.6103, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 3 Loss: tensor(0.3371, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 4 Loss: tensor(0.4038, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "N: 7\n",
+      "Epoch: 0 Loss: tensor(0.6633, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 1 Loss: tensor(0.6115, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 2 Loss: tensor(0.4207, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 3 Loss: tensor(0.3737, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 4 Loss: tensor(0.3468, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "N: 8\n",
+      "Epoch: 0 Loss: tensor(0.4205, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 1 Loss: tensor(0.4848, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 2 Loss: tensor(0.3525, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 3 Loss: tensor(0.3812, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 4 Loss: tensor(0.3500, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "N: 9\n",
+      "Epoch: 0 Loss: tensor(0.5791, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 1 Loss: tensor(0.4315, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 2 Loss: tensor(0.2572, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 3 Loss: tensor(0.3580, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 4 Loss: tensor(0.4210, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "N: 10\n",
+      "Epoch: 0 Loss: tensor(0.4242, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 1 Loss: tensor(0.2577, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 2 Loss: tensor(0.2704, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 3 Loss: tensor(0.3307, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 4 Loss: tensor(0.2216, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "N: 11\n",
+      "Epoch: 0 Loss: tensor(0.2703, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 1 Loss: tensor(0.3646, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 2 Loss: tensor(0.3337, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 3 Loss: tensor(0.3272, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n",
+      "Epoch: 4 Loss: tensor(0.3002, device='cuda:0', grad_fn=<BinaryCrossEntropyBackward0>)\n"
      ]
     }
    ],
@@ -938,19 +1000,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "0b18569d-1d33-4c52-bda4-7a0560867f5d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'model_scores' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmodel_scores\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model_scores' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0.845125, 0.8045], [2, 0.80125, 0.7555], [3, 0.79675, 0.7605], [4, 0.83325, 0.7925], [5, 0.817125, 0.783], [6, 0.820625, 0.787], [7, 0.823625, 0.8015], [8, 0.86125, 0.8125], [9, 0.87175, 0.846], [10, 0.88475, 0.8555], [11, 0.889875, 0.856]]\n"
      ]
     }
    ],
