--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4d09ed15-aedc-4fc2-818f-a72d9d98c52f",
    "metadata": {
     "id": "4d09ed15-aedc-4fc2-818f-a72d9d98c52f"
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b76f9c22-366a-4a15-a179-4c5383ebc244",
    "metadata": {
     "id": "b76f9c22-366a-4a15-a179-4c5383ebc244"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "42f93876-e2bf-4b48-b96e-49f03c8593b2",
    "metadata": {
     "id": "42f93876-e2bf-4b48-b96e-49f03c8593b2"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "48213dc3-68d1-4b8b-a454-ec5deed1ee28",
    "metadata": {
     "id": "48213dc3-68d1-4b8b-a454-ec5deed1ee28"
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "dcc1073e-f664-4053-a2a0-6a866a8ba2b0",
    "metadata": {
     "colab": {
@@ -156,7 +156,15 @@
     "id": "dcc1073e-f664-4053-a2a0-6a866a8ba2b0",
     "outputId": "72b8099c-16ff-4eb4-8445-860c0191f8e8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.26.0\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "print(np.__version__)\n",
@@ -172,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "04d9d4b2-68ac-433e-933f-407c97a5807b",
    "metadata": {
     "colab": {
@@ -213,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "943dccdc-d64d-438c-8285-42ae4cac65aa",
    "metadata": {
     "colab": {
@@ -294,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "36e84017-3c95-4195-a64e-872de86aa27d",
    "metadata": {
     "id": "36e84017-3c95-4195-a64e-872de86aa27d"
@@ -304,6 +312,7 @@
     "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
     "inputs, labels = get_inputs_labels(train_data)\n",
     "dataset = TextDataset(inputs, labels, tokenizer, 512)\n",
+    "baseline_dataloader = DataLoader(dataset, batch_size=64, shuffle=True)\n",
     "dataloader = DataLoader(dataset, batch_size=128, shuffle=True)"
    ]
   },
@@ -319,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9DhDookCV4cA",
    "metadata": {
     "id": "9DhDookCV4cA"
@@ -336,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "85f05cf6-0511-4f27-90fc-207b5e4678ef",
    "metadata": {
     "colab": {
@@ -346,7 +355,48 @@
     "id": "85f05cf6-0511-4f27-90fc-207b5e4678ef",
     "outputId": "1e14c547-ac57-4d56-91d2-b461c92745c8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "=====================================================================================\n",
+       "Layer (type:depth-idx)                                       Param #\n",
+       "=====================================================================================\n",
+       "BertForSequenceClassification                                --\n",
+       "├─BertModel: 1-1                                             --\n",
+       "│    └─BertEmbeddings: 2-1                                   --\n",
+       "│    │    └─Embedding: 3-1                                   23,440,896\n",
+       "│    │    └─Embedding: 3-2                                   393,216\n",
+       "│    │    └─Embedding: 3-3                                   1,536\n",
+       "│    │    └─LayerNorm: 3-4                                   1,536\n",
+       "│    │    └─Dropout: 3-5                                     --\n",
+       "│    └─BertEncoder: 2-2                                      --\n",
+       "│    │    └─ModuleList: 3-6                                  85,054,464\n",
+       "│    └─BertPooler: 2-3                                       --\n",
+       "│    │    └─Linear: 3-7                                      590,592\n",
+       "│    │    └─Tanh: 3-8                                        --\n",
+       "├─Dropout: 1-2                                               --\n",
+       "├─Linear: 1-3                                                1,538\n",
+       "=====================================================================================\n",
+       "Total params: 109,483,778\n",
+       "Trainable params: 109,483,778\n",
+       "Non-trainable params: 0\n",
+       "====================================================================================="
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "baseline_model = get_baseline_model()\n",
     "summary(baseline_model)"
@@ -354,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d0f61be6-17ee-42cd-ab37-024e26f63319",
    "metadata": {
     "id": "d0f61be6-17ee-42cd-ab37-024e26f63319"
@@ -388,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e4c66e63-b9e7-4753-be27-8bfb06b7a8ef",
    "metadata": {},
    "outputs": [],
@@ -410,14 +460,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "4aeb1632-512f-4260-8563-ab3334a81598",
    "metadata": {},
    "outputs": [],
    "source": [
     "def baseline_train_test(model, epochs, dataloader, train_df, test_df, learning_rate = 1e-3, calc_train_f1 = True):\n",
-    "    torch.cuda.empty_cache()\n",
-    "    gc.collect()\n",
     "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "    model.to(device)\n",
     "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
@@ -452,9 +500,18 @@
    "execution_count": null,
    "id": "457fa9ca-fabb-45f3-b0e5-bc1220889ced",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.3674, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.2621, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
-    "baseline_train_test(baseline_model, 1, dataloader, train_data, test_data, learning_rate = 1e-4)"
+    "baseline_train_test(baseline_model, 1, baseline_dataloader, train_data, test_data, learning_rate = 1e-4)"
    ]
   },
   {
